<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--    Views on the left side -->
    <TextView
        android:id="@+id/tvBaseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/txt_base"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txt_24_per"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvBaseLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvBaseLabel" />

    <TextView
        android:id="@+id/tvTipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txt_tip"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/tvBaseLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvTipPercent"
        tools:text="Tip" />

    <TextView
        android:id="@+id/tvTotalLabel"
        android:layout_width="42dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_total"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/tvBaseLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvTipLabel"
        tools:text="Total" />

    <!--    Views on the right side-->
    <EditText
        android:id="@+id/etBaseAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="8"
        android:hint="@string/txt_bill_amount"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvBaseLabel"
        app:layout_constraintStart_toEndOf="@+id/tvBaseLabel"
        app:layout_constraintTop_toTopOf="@id/tvBaseLabel" />

    <SeekBar
        android:id="@+id/seekbarTip"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="30"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipPercent"
        app:layout_constraintStart_toStartOf="@+id/etBaseAmount"
        app:layout_constraintTop_toTopOf="@+id/tvTipPercent" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="62dp"
        android:layout_height="23dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipLabel"
        app:layout_constraintStart_toStartOf="@+id/seekbarTip"
        app:layout_constraintTop_toTopOf="@+id/tvTipLabel"
        tools:text="@string/txt_tip_amount" />

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotalLabel"
        app:layout_constraintStart_toStartOf="@+id/tvTipAmount"
        app:layout_constraintTop_toTopOf="@+id/tvTotalLabel"
        tools:text="@string/txt_totalAmount" />

</androidx.constraintlayout.widget.ConstraintLayout>